--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cynthia Ugwu • Product Designer</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="loco.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
@@ -14,7 +15,7 @@
   </head>
 
   <body>
-    <div id="minicircle"></div>
+    <div id="minicircle"><p>VIEW</p></div>
     <div id="main">
       <div id="hero">
         <div id="nav">
